--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,24 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:11
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: test
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - "5432:5432"
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
-    - uses: vincetse/herokuish-action@master
+    - uses: buildpack-ci/buildpack-ci-action@master
+      env:
+        BUILDPACK_URL: https://github.com/vincetse/heroku-buildpack-python
+        DATABASE_URL: postgres://postgres:postgres@postgres:5432/test
